看看API文档这些接口对不对,还有一些新接口注册之类的